feature: add yaml linting

--- a/custom_event_checks/pageduty/pd-avg-mttr.yaml
+++ b/custom_event_checks/pageduty/pd-avg-mttr.yaml
@@ -1,8 +1,10 @@
+---
 kind: generic
 spec:
     category: reliability
     enabled: true
-    filter: ruby-services
+    # uncomment if you want to apply a filter
+    # filter: ruby-services
     integration: generic-pagerduty-analytics-api
     level: gold
     message: |
@@ -32,6 +34,7 @@ spec:
         ### Why is this check important?
 
         We use PagerDuty for on-call and incident management.  We are trying to keep incident resolve time (MTTR) down to **below 2 hours** on average.
-    owner: sre_team
+    # uncomment if you want to apply a check owner
+    # owner: sre_team
     serviceSelector: .ol_service_alias
     successCondition: .data[0].mean_seconds_to_resolve <  3600*2
