fixup yamls after testing import

--- a/custom_event_checks/demo.yaml
+++ b/custom_event_checks/demo.yaml
@@ -1,7 +1,7 @@
 ---
+version: 1
 kind: generic
 spec:
-    enabled: false
     message: |-
         {% if check.passed %}
           ### Check passed
